--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="es">
 <head>
-    <title>Examen hola mnundooppp</title>
+    <title>Examen </title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="jquery-3.0.0.min.js"></script>
@@ -16,30 +16,7 @@
 </head>
 <body> 
 <div class="page-header">
-  <h1 >Examen</h1>
-  <div class="col-lg-4">
-    <div class="input-group">
-      <input type="text" class="form-control" placeholder="New item..." id="text">
-      <span class="input-group-btn">
-        <button class="btn btn-default" type="button" id="right">Add to right</button>
-        <button class="btn btn-default" type="button" id="left">Add to left</button>
-      </span>
-    </div>
-  </div>
-</div>
-<div class="col-sm-3">
-    <ul class="list-right">
-        
-    </ul>
-</div>
-<div class="col-sm-1">
-   <button class="btn btn-default" type="button">>></button>
-   <button class="btn btn-default" type="button"><<</button> 
-</div>
-<div class="col-sm-3">
-    <ul class="list-left">
-      
-    </ul>
+  <h1 >Proyecto 2 </h1>
 </div>
 </body>
 </html>
