--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <title>Proyecto</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://code.interactjs.io/v1.2.6/interact.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script type="text/javascript" src="jquery-2.1.0.min.js"></script>
     <script type="text/javascript" src="dropzones.js"></script>
+    <script src="src/jquery.ui.position.js" type="text/javascript"></script>
+    <script src="src/jquery.contextMenu.js" type="text/javascript"></script>
+    <link href="src/jquery.contextMenu.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="custom.css">
+    <link rel="stylesheet" href="modalstyle.css">
     <!-- Latest compiled and minified CSS -->
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	 <!-- Optional theme -->
